[package]
name = "async-chat"
version = "0.1.0"
authors = ["Jim Blandy <jimb@red-bean.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# For tokio::sync::oneshot.
tokio = { version = "0.2", features = ["sync"] }

# Workaround https://github.com/async-rs/async-std/issues/785
# smol = "=0.1.5"

# Debugging
# smol = { path = "/home/jimb/rust/smol" }

[dependencies.async-std]
features = ["unstable"]
# path = "/home/jimb/rust/async-std"
version = "1.6.0-beta.2"
#git = "https://github.com/async-rs/async-std.git"
#rev = "1214bc2" # https://github.com/async-rs/async-std/issues/771
